# LitV

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  build.sh
.github/workflows/: nightly.yml
src/: cli.rs  main.rs
src/commands/: add.rs  init.rs  mod.rs  remove.rs  run.rs  venv.rs
