[package]
name = "litv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
zip = "2"
flate2 = "1.0"
tar = "0.4"
